syntax = "proto3";

package controller.api.resources.credentiallibraries.v1;

option go_package = "github.com/hashicorp/boundary/sdk/pbs/controller/api/resources/credentiallibraries;credentiallibraries";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/struct.proto";
import "controller/api/resources/scopes/v1/scope.proto";
import "controller/custom_options/v1/options.proto";

// CredentialLibrary contains all fields related to an Credential Library resource
message CredentialLibrary {
  // Output only. The ID of the Credential Library.
  string id = 10;

  // The ID of the Credential Store of which this Credential Library is a part.
  string credential_store_id = 20 [json_name = "credential_store_id"];

  // Output only. Scope information for this Credential Library.
  resources.scopes.v1.ScopeInfo scope = 30;

  // Optional name for identification purposes.
  google.protobuf.StringValue name = 40 [(custom_options.v1.generate_sdk_option) = true, (custom_options.v1.mask_mapping) = { this: "name" that: "Name" }];

  // Optional user-set description for identification purposes.
  google.protobuf.StringValue description = 50 [(custom_options.v1.generate_sdk_option) = true, (custom_options.v1.mask_mapping) = { this: "description" that: "Description" }];

  // Output only. The time this resource was created.
  google.protobuf.Timestamp created_time = 60 [json_name = "created_time"];

  // Output only. The time this resource was last updated.
  google.protobuf.Timestamp updated_time = 70 [json_name = "updated_time"];

  // Version is used in mutation requests, after the initial creation, to ensure this resource has not changed.
  // The mutation will fail if the version does not match the latest known good version.
  uint32 version = 80;

  // The Credential Library type.
  string type = 90;

  // The attributes that are applicable for the specific Credential Library type.
  google.protobuf.Struct attributes = 100 [(custom_options.v1.generate_sdk_option) = true];

  // Output only. The available actions on this resource for this user.
  repeated string authorized_actions = 300 [json_name = "authorized_actions"];

  // The type of credential this library will issue, defaults to Unspecified
  string credential_type = 310 [json_name = "credential_type", (custom_options.v1.generate_sdk_option) = true];

  // The credential mapping overrides
  google.protobuf.Struct credential_mapping_overrides = 320 [json_name = "credential_mapping_overrides", (custom_options.v1.generate_sdk_option) = true];
}

// The attributes of a vault typed Credential Library.
message VaultCredentialLibraryAttributes {
  // The path in Vault to request credentials from.
  google.protobuf.StringValue path = 10 [(custom_options.v1.generate_sdk_option) = true, (custom_options.v1.mask_mapping) = { this: "attributes.path" that: "VaultPath" }];

  // The HTTP method the library uses to communicate with Vault.
  google.protobuf.StringValue http_method = 20 [json_name = "http_method", (custom_options.v1.generate_sdk_option) = true, (custom_options.v1.mask_mapping) = { this: "attributes.http_method" that: "HttpMethod" }];

  // The body of the HTTP request the library sends to vault. When set http_method must be "POST"
  google.protobuf.StringValue http_request_body = 30 [json_name = "http_request_body", (custom_options.v1.generate_sdk_option) = true, (custom_options.v1.mask_mapping) = { this: "attributes.http_request_body" that: "HttpRequestBody" }];
}